@@ -1,5 +1,7 @@
 2007-12-30  Matthias Clasen  <mclasen@redhat.com> 
 
+	* gfileinputstream.c:
+	* gfileoutputstream.c:
 	* gloadableicon.h:
 	* gunixmounts.c:
 	* gmount.h:
